small margin fix on mobile

--- a/src/styles/components/Weather.scss
+++ b/src/styles/components/Weather.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   @media (max-width: 768px){
     display: block;
+    margin: 40px auto 50px;
   }
 
 
